--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header>
             <h1 class="logo">Letter Tiles</h1>
             <div class="right">
-                <select name="grade" id="" class="grade" hidden>
+                <select name="grade" id="" class="grade">
                     <option value="K">Level K</option>
                     <option value="1">Level 1</option>
                 </select>
