Update Docs and Fix UNK defect

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div id="ong" class="glued tiles" draggable="true">ong</div>
                 <div id="onk" class="glued tiles" draggable="true">onk</div>
                 <div id="ung" class="glued tiles" draggable="true">ung</div>
-                <div id="ung" class="glued tiles" draggable="true">unk</div>
+                <div id="unk" class="glued tiles" draggable="true">unk</div>
             </div>
         </div>
     </div>
