Adding first suffix S, need to refactor

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                 <div id="ung" class="glued tiles" draggable="true">ung</div>
                 <div id="unk" class="glued tiles" draggable="true">unk</div>
             </div>
+            <div class="flex-container level_1 level_1_3">
+                <div id="s-suffix" class="suffix tiles" draggable="true">s</div>
+            </div>
         </div>
     </div>
 
